--- a/index.html
+++ b/index.html
@@ -74,20 +74,16 @@
     </ul>
   </div>
 </nav>
-    <!--
-    <div class="container">
-      <div class="alert alert-info" role="alert">
-        Thanks for coming to WAC 2019! Watch VODs of our programs <a class="alert-link" href="https://www.facebook.com/worldaffairsconference">on our Facebook Page</a>!
-      </div>
-    </div>
-    -->
+
+    
+  
       
 
    
 
 
 
-      <div class="index-welcome">
+ <div class="index-welcome">
   <div class="container">
     <div class="text-center text-md-left">
       <h2>Welcome to the 2020</h2>
@@ -104,6 +100,19 @@
     </div>
   </div>
 </div>
+<div class="container mt-3">
+      <div class="alert alert-info" role="alert">
+        <h2>
+            Learn more about WAC's new "stream": SPRINT
+        </h2>
+        <h4>
+            Journeying into the next decade, we realize the importance of hosting a modern conference and have subsequently developed a reformed structure for WAC for students that should be very exciting. 
+        </h4>
+        <h4>
+          Click the SPRINT tab in the top right to learn more.
+        </h4>
+      </div>
+    </div>
 <div class="container">
   <div class="card card-body mt-3 mx-3">
     <div class="row">
