--- a/plenaries/educ.html
+++ b/plenaries/educ.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="author" content="The World Affairs Conference">
 
-  <title>Startup Cleanup | The World Affairs Conference</title>
+  <title>Too Cool for School? | The World Affairs Conference</title>
   <meta name="description" content="Can businesses abandon their profit motives to strive for a healthier planet with our current competitive economic system...">
 
   <link rel="icon" type="image/png" sizes="192x192"  href="../img/android-icon-192x192.png">
@@ -82,30 +82,30 @@
 			<div class="text-center">
 				<div class="card">
 					<div class="card-body">
-						<h1>Education vs Entrepreneurship </h1>
+						<h1>Too Cool for School?</h1>
 						<p class="card-text">
-							<p>With technology and innovation at the forefront of future job markets, some argue that the education system has failed to evolve with the times. As the digital age becomes increasingly imposing, it is important to critique the limitations that university may have on creativity. More and more people are choosing an ‘alternate’ career path, choosing to skip post-secondary education in light of becoming an entrepreneur. This path promotes independence, self-management, and responsibility not without the danger of the unknown. Entering a more traditional university system is certainly not for everyone, but it is a defined and ‘safe’ option for most, despite the accumulation of student debt (something absent in the path of an entrepreneur). Moving into the impending decade we are left with an essential question, what will the new age of education entail?
-
+							<p>
+                            With technology and innovation at the forefront of future job markets, some argue that the education system has failed to evolve with the times. As the digital age becomes increasingly imposing, it is important to critique the limitations that university may have on creativity. More and more people are choosing an ‘alternate’ career path, choosing to skip post-secondary education in light of becoming an entrepreneur. This path promotes independence, self-management, and responsibility but with the path of an entrepreneur comes the danger of the unknown. Entering a more traditional university system is certainly not for everyone, but it is a more certain and ‘safe’ option for most, despite the accumulation of student debt (something absent in the path of an entrepreneur). 
                             </p>
 
-						<p class="card-text">
-							More information on plenaries and programs are coming soon.
-						</p>
 					</div>
 				</div>
 			</div>
-            <!--
+            
 			<div class="card card-body mt-2">
-				<h1 class="text-center">Speakers</h1>
+				<h1 class="text-center">Speaker</h1>
+                <hr>
 				<div class="row pb-2">
 					<div class="col-md-4">
-						<img class="img-fluid mx-auto d-block rounded" src="../img/speakers/Doosterman.png" alt="Dennon Oosterman">
+						<img class="img-fluid mx-auto d-block rounded" src="../img/speakers/sgoswami.jpg" alt="Swish Goswami">
 					</div>
 					<div class="col-md-8">
-						<h2 class="text-center text-md-left">Dennon Oosterman</h2>
-						Dennon Oosterman is known to be an innovator, inventor, leader, and entrepreneur. His Bachelor of Applied Science in Engineering Physics at the University of British Columbia and internships at Bell and Columbia Capital could not satisfy his need to provide to the environment. Dennon Oosterman is the Founder and CEO of ReDeTec, a company that develops recycling technology for 3D printers. He worked to develop the core technology, led all private and public funding efforts, and built his current team to what they are today. His dream is to empower businesses and educators with unlimited creative freedom through sustainable manufacturing. From research and development to product development and branding, building a business around innovative technology is what Oosterman does best.
+						<h2 class="text-center text-md-left">Swish Goswami</h2>			
+                        Swish Goswami is a serial tech entrepreneur, LinkedIn Youth Editor, and UN Youth Ambassador as well as a three-time TEDx speaker. At 22, Swish is the CEO and founder of Trufan, a tech-driven media company building technology to help influencers, brands and agencies discover and reward their top fans. He has been published in over one hundred national and international publications, including Plan Canada’s Top 20 under 20 and the United Nations’s Outstanding Youth Leadership award. 
+
 					</div>
 				</div>
+                <!--
 				<div class="row">
 					<div class="col-md-4">
 						<img class="img-fluid mx-auto d-block rounded" src="../img/speakers/ayetchew.png" alt="Yossi Sheffi">
