--- a/plenaries/sprea.html
+++ b/plenaries/sprea.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="author" content="The World Affairs Conference">
 
-  <title>Startup Cleanup | The World Affairs Conference</title>
+  <title>Satirical Society | The World Affairs Conference</title>
   <meta name="description" content="Can businesses abandon their profit motives to strive for a healthier planet with our current competitive economic system...">
 
   <link rel="icon" type="image/png" sizes="192x192"  href="../img/android-icon-192x192.png">
@@ -82,31 +82,28 @@
 			<div class="text-center">
 				<div class="card">
 					<div class="card-body">
-						<h1>Spread vs Satire</h1>
+						<h1>Satirical Society</h1>
 						<p class="card-text">
-							<p>The current political climate is scary, and classic news reporting makes things seem grim. With headlines like “Proof of Russian collusion found” and “ School shooting takes 10 lives”, it’s becoming harder and harder to find a silver lining to things. If you go online, it is clear that many people find solace in political satire, with comedians like John Olivers and Trevor Noah having millions of subscribers. In this kind of political climate, satire is a double-edged sword: One can laugh along with it, a small beacon of humour in an otherwise grim world, but it can also be used as a crude one-liner to attack well-constructed ideas and spread disinformation. What distinguishes between satire and blatant fake news? And who is to decide when a piece of satire finally crosses the line? 
-
-
+							<p>
+                            The current political climate is scary, and classic news reporting makes things seem grim. With headlines like “Proof of Russian collusion found” and “ School shooting takes 10 lives”, it’s becoming harder and harder to find a silver lining to things. If you go online, it is clear that many people find solace in political satire, with comedians like John Olivers and Trevor Noah having millions of subscribers. In this kind of political climate, satire is a double-edged sword: One can laugh along with it, a small beacon of humour in an otherwise grim world, but it can also be used as a crude one-liner to attack well-constructed ideas and spread disinformation. What distinguishes between satire and blatant fake news? And who is to decide when a piece of satire finally crosses the line? 
                             </p>
-
-						<p class="card-text">
-							More information on plenaries and programs are coming soon.
-						</p>
 					</div>
 				</div>
 			</div>
-            <!--
 			<div class="card card-body mt-2">
-				<h1 class="text-center">Speakers</h1>
+				<h1 class="text-center">Speaker</h1>
+                <hr>
 				<div class="row pb-2">
 					<div class="col-md-4">
-						<img class="img-fluid mx-auto d-block rounded" src="../img/speakers/Doosterman.png" alt="Dennon Oosterman">
+						<img class="img-fluid mx-auto d-block rounded" src="../img/speakers/ehunter.jpg" alt="Emma Hunter">
 					</div>
 					<div class="col-md-8">
-						<h2 class="text-center text-md-left">Dennon Oosterman</h2>
-						Dennon Oosterman is known to be an innovator, inventor, leader, and entrepreneur. His Bachelor of Applied Science in Engineering Physics at the University of British Columbia and internships at Bell and Columbia Capital could not satisfy his need to provide to the environment. Dennon Oosterman is the Founder and CEO of ReDeTec, a company that develops recycling technology for 3D printers. He worked to develop the core technology, led all private and public funding efforts, and built his current team to what they are today. His dream is to empower businesses and educators with unlimited creative freedom through sustainable manufacturing. From research and development to product development and branding, building a business around innovative technology is what Oosterman does best.
+						<h2 class="text-center text-md-left">Emma Hunter</h2>
+                        Emma Hunter is a Canadian actress and journalist.In 2018, she received three Canadian Screen Award nominations at the 6th Canadian Screen Awards, in the categories of Best Supporting Actress in a Comedy Program or Series for Mr. D, Best Ensemble Performance in a Variety or Sketch Comedy Program or Series for The Beaverton, and Best Actress in a Web Program or Series for Save me. She won the award for Best Actress in a Web Program or Series. She also co-anchors with Miguel Riveras for the news satire series The Beaverton.
+
 					</div>
 				</div>
+                <!--
 				<div class="row">
 					<div class="col-md-4">
 						<img class="img-fluid mx-auto d-block rounded" src="../img/speakers/ayetchew.png" alt="Yossi Sheffi">
@@ -116,8 +113,8 @@
 						Adonis Yatchew’s research focuses on energy and regulatory economics, and econometrics. Since completing his Ph.D. at Harvard University, he has taught at the University of Toronto. He has also held visiting appointments at Trinity College, Cambridge University, the University of Chicago and Australian National University, among others. He the Editor-in-Chief of The Energy Journal. He has advised public and private sector companies on energy, regulatory and other matters for over 25 years and has provided testimony in numerous regulatory and litigation procedures. Adonis Yatchew currently teaches undergraduate and graduate courses in energy, graduate courses in econometrics and ‘Big Ideas’ courses in the School of Environment with colleagues in physics and classics.
 					</div>
 				</div>
+                -->
 			</div>
-            -->
 			<div class="card card-body text-center mt-2">
 				<p class="card-text">
 					<a class="card-link" href="../plenaries/index.html"><span class="fa fa-arrow-left"></span> View the other plenaries.</a>
