--- a/plenaries/index.html
+++ b/plenaries/index.html
@@ -80,8 +80,8 @@
       <div class="card card-body">
         <div class="row">
           <div class="col-sm-12">
-            <a href="../plenaries/space.html"><h4 class="card-title">Space Exploration vs Climate Change</h4></a>
-            <p class="card-text">Climate change is an imminent issue that may become irreversible in 12 years, but why are some of the richest individuals in the world investing in space exploration rather than climate change? The world is falling apart: the carbon levels have never been this high, the ice caps are melting at an unprecedented pace and sea levels are rising. </p>
+            <a href="../plenaries/space.html"><h4 class="card-title">Climate Change: Myth vs. Reality</h4></a>
+            <p class="card-text">Climate change is an imminent issue that may become irreversible in 12 years, but why are some of the richest individuals in the world investing in space exploration rather than climate change? This raises the question: should we spend the next 12 years tackling the issue here on Earth or focus on finding a new home? </p>
           </div>
         </div>
       </div>
@@ -92,7 +92,7 @@
         <div class="row">
           <div class="col-sm-12">
             <a href="../plenaries/pol.html"><h4 class="card-title">Immigration</h4></a>
-            <p class="card-text">Immigration has never been more important than it is today. With 1 in every 30 people living outside their country of birth, there have never been higher levels of movement recorded. However, issues surrounding refugees, illegal immigrants, and asylum seekers are on the rise.
+            <p class="card-text">Immigration has never been more important than it is today. With 1 in every 30 people living outside their country of birth, there have never been higher levels of movement recorded. However, with issues surrounding refugees, illegal immigrants, and asylum seekers on the rise, must countries create and strengthen existing immigration policies in order to create the best situation possible for all?
             </p>
           </div>
         </div>
@@ -103,8 +103,8 @@
       <div class="card card-body">
         <div class="row">
           <div class="col-sm-12">
-            <a href="../plenaries/educ.html"><h4 class="card-title">Education vs Entrepreneurship</h4></a>
-              <p class="card-text">With technology and innovation at the forefront of future job markets, some argue that the education system has failed to evolve with the times. As the digital age becomes increasingly imposing, it is important to critique the limitations that university may have on creativity. </p>
+            <a href="../plenaries/educ.html"><h4 class="card-title">Too Cool for School?</h4></a>
+              <p class="card-text">With technology and innovation at the forefront of future job markets, some argue that the education system has failed to evolve with the times. As the digital age becomes increasingly imposing, it is important to critique the limitations that university may have on creativity.  </p>
           </div>
         </div>
       </div>
@@ -114,8 +114,8 @@
       <div class="card card-body">
         <div class="row">
           <div class="col-sm-12">
-            <a href="../plenaries/sprea.html"><h4 class="card-title">Spread vs Satire</h4></a>
-            <p class="card-text">The current political climate is scary, and classic news reporting makes things seem grim. With headlines like “Proof of Russian collusion found” and “ School shooting takes 10 lives”, it’s becoming harder and harder to find a silver lining to things. </p>
+            <a href="../plenaries/sprea.html"><h4 class="card-title">Satirical Society</h4></a>
+            <p class="card-text">The current political climate is scary, and classic news reporting makes things seem grim. If you go online, it is clear that many people find solace in political satire, with comedians like John Olivers and Trevor Noah having millions of subscribers. In this kind of political climate, is satire a double-edged sword?</p>
           </div>
         </div>
       </div>
