--- a/plenaries/space.html
+++ b/plenaries/space.html
@@ -64,6 +64,9 @@
       </li>
     </ul>
     <ul class="navbar-nav float-lg-right">
+      <li class="nav-item mr-2">
+        <a class="btn btn-outline-danger" href="wacathon/index.html" data-proofer-ignore>SPRINT</a>
+      </li>
       <li class="nav-item">
         <a class="btn btn-outline-primary" href="https://worldaffarisregistration.github.io/#/" data-proofer-ignore>Register</a>
       </li>
