One day turn over updates

--- a/plenaries/space.html
+++ b/plenaries/space.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="author" content="The World Affairs Conference">
 
-  <title>Startup Cleanup | The World Affairs Conference</title>
+  <title>Climate Change: Myth vs. Reality | The World Affairs Conference</title>
   <meta name="description" content="Can businesses abandon their profit motives to strive for a healthier planet with our current competitive economic system...">
 
   <link rel="icon" type="image/png" sizes="192x192"  href="../img/android-icon-192x192.png">
@@ -64,6 +64,9 @@
       </li>
     </ul>
     <ul class="navbar-nav float-lg-right">
+      <li class="nav-item mr-2">
+        <a class="btn btn-outline-danger" href="wacathon/index.html" data-proofer-ignore>SPRINT</a>
+      </li>
       <li class="nav-item">
         <a class="btn btn-outline-primary" href="https://worldaffarisregistration.github.io/#/" data-proofer-ignore>Register</a>
       </li>
@@ -82,29 +85,28 @@
 			<div class="text-center">
 				<div class="card">
 					<div class="card-body">
-						<h1>Space Exploration vs Climate Change</h1>
+						<h1>Climate Change: Myth vs. Reality</h1>
 						<p class="card-text">
 							<p>Climate change is an imminent issue that may become irreversible in 12 years, but why are some of the richest individuals in the world investing in space exploration rather than climate change? The world is falling apart: the carbon levels have never been this high, the ice caps are melting at an unprecedented pace and sea levels are rising. Yet billionaires such as Jeff Bezos, Elon Musk and Richard Branson are in a very competitive billionaire space race. This raises the question: should we spend the next 12 years tackling the issue here on Earth or focus on finding a new home? Is it ethical to spend resources in space exploration when our planet is on fire? 
                             </p>
 
-						<p class="card-text">
-							More information on plenaries and programs are coming soon.
-						</p>
 					</div>
 				</div>
 			</div>
-            <!--
+            
 			<div class="card card-body mt-2">
-				<h1 class="text-center">Speakers</h1>
+				<h1 class="text-center">Speaker</h1>
+                <hr>
 				<div class="row pb-2">
 					<div class="col-md-4">
-						<img class="img-fluid mx-auto d-block rounded" src="../img/speakers/Doosterman.png" alt="Dennon Oosterman">
+						<img class="img-fluid mx-auto d-block rounded" src="../img/speakers/jveizer.jpg" alt="Jan Veizer">
 					</div>
 					<div class="col-md-8">
-						<h2 class="text-center text-md-left">Dennon Oosterman</h2>
-						Dennon Oosterman is known to be an innovator, inventor, leader, and entrepreneur. His Bachelor of Applied Science in Engineering Physics at the University of British Columbia and internships at Bell and Columbia Capital could not satisfy his need to provide to the environment. Dennon Oosterman is the Founder and CEO of ReDeTec, a company that develops recycling technology for 3D printers. He worked to develop the core technology, led all private and public funding efforts, and built his current team to what they are today. His dream is to empower businesses and educators with unlimited creative freedom through sustainable manufacturing. From research and development to product development and branding, building a business around innovative technology is what Oosterman does best.
+						<h2 class="text-center text-md-left">Jan Veizer</h2>
+						Jan Veizer is an emeritus professor of Geology at the University of Ottawa (Emeritus since April 2004) where he held the NSERC/Noranda/CIAR Research Chair in Earth Systems. From 1992 to 2004 he also served as the Director of the 'Earth System Evolution Program' of the Canadian Institute for Advanced Research (CIAR). Dr. Veizer has received numerous prestigious awards, including the  Willet G. Miller Medal (Royal Society of Canada, 1991), the G.W. Leibniz Prize, the highest award of the German Research Foundation (1992), the Logan Medal, the most prestigious honour granted by the Geological Association of Canada (1995), the Bancroft Medal (Royal Society of Canada, 2000) and the Gold Medal (Slovak Geological Survey). In 1986, he was elected to the Royal Society of Canada.
 					</div>
 				</div>
+                <!--
 				<div class="row">
 					<div class="col-md-4">
 						<img class="img-fluid mx-auto d-block rounded" src="../img/speakers/ayetchew.png" alt="Yossi Sheffi">
