--- a/faq/index.html
+++ b/faq/index.html
@@ -61,6 +61,9 @@
       </li>
     </ul>
     <ul class="navbar-nav float-lg-right">
+      <li class="nav-item mr-2">
+        <a class="btn btn-outline-danger" href="../wacathon/index.html" data-proofer-ignore>SPRINT</a>
+      </li>
       <li class="nav-item">
         <a class="btn btn-outline-primary" href="https://worldaffarisregistration.github.io/#/" data-proofer-ignore>Register</a>
       </li>
@@ -115,7 +118,7 @@
           </a>
           <div id="collapse-wheniswac" class="collapse" role="tabpanel" aria-labelledby="heading-wheniswac">
             <div class="card-body">
-              <p>WAC spans two days: the Keynote Address, featuring a prominent member of the community, is held on the night of February 4th and open to the public; and the Conference Day, which is held on February 5th and is attended by delegates and faculty supervisors only.</p>
+              <p>WAC spans two days: the Keynote Address, featuring a prominent member of the community, is held on the night of February 3rd and open to the public; and the Conference Day, which is held on February 4th and is attended by delegates and faculty supervisors only.</p>
 
             </div>
           </div>
