--- a/wacathon/index.html
+++ b/wacathon/index.html
@@ -82,32 +82,18 @@
   <div class="card">
     <div class="card-body">
       <h1 class="text-center"> WAC SPRINT</h1>
-        <p class = "text-center">
-            Journeying into the next decade, we realize the importance of hosting a modern conference and have subsequently developed a reformed structure for WAC for students that should be very exciting. To give a brief rundown, our annual conference in February will be focused on three different takeaways: experiential learning, innovation, and competition.
+        <p class = "card-text">
+            Have you ever wished that you could share your ideas for reinventing education? Join us at the inaugural WAC: SPRINT! Collaborate with other passionate students to develop unique ideas to reimagine education. Engage with the team from Future Design School as you develop your ideas, validate them and craft a pitch that you will present to a panel of experts judges for great prizes!
+        </p>
+        <p class = "card-text">
+            SPRINT is a competitive design sprint, separate from the regular activities on the day of WAC. After a five hour session, it will culminate in a pitch competition in front of a panel of top educators and industry professionals across Toronto. We are proud to announce that this panel will be chaired by Michele Romanow, one of Canada’s top tech entrepreneurs and Dragon on the hit show, Dragon’s Den.
         </p>
        
     </div>
   </div>
-  <div class="card-deck">
-      <div class="card mt-3">
-        <div class="card-body">
-          <h3 class="card-title-center">Experiential Learning / Innovation</h3>
-            <p class = "card-text">
-                These two will be highlighted in the newly developed program on the day of WAC where students will participate in meaningful workshops pertinent to the plenary discussion that they choose. This will then be followed up by an engaging session in which students will be able to apply their newly acquired knowledge on the topics in creative ways. Following this, students will have the opportunity to participate in an engaging workshop wherein they will apply their newly acquired knowledge on the topics in creative ways.
-            </p>
 
-        </div>
-      </div>
-      <div class="card mt-3">
-        <div class="card-body">
-          <h3 class="card-title-center">Competition!</h3>
-            <p class = "card-text">
-                Our most exciting decision to WAC this year is the adoption of an exclusive stream. This design sprint will take place separate from the regular activities on the day of WAC, and will culminate in a pitch competition in front of a panel of top educators across Toronto. The theme for this stream is "Hacking Education," and students will be tasked to design their very own education system of the future. Only 50 students will be accepted into this stream from across the GTA, so we encourage you begin the application process as soon as it opens. Stay tuned for more updates.
-            </p>
+    
 
-        </div>
-      </div>
-  </div>
   <div class="card mt-3">
     <div class="card-body">
       <div class="typeform-widget" data-url="https://wac2020.typeform.com/to/NZZSjC" style="border: 1px solid; width: 100%; height: 600px;"></div> <script> (function() { var qs,js,q,s,d=document, gi=d.getElementById, ce=d.createElement, gt=d.getElementsByTagName, id="typef_orm", b="https://embed.typeform.com/"; if(!gi.call(d,id)) { js=ce.call(d,"script"); js.id=id; js.src=b+"embed.js"; q=gt.call(d,"script")[0]; q.parentNode.insertBefore(js,q) } })() </script>
