--- a/keynote/index.html
+++ b/keynote/index.html
@@ -78,20 +78,19 @@
 
    
 
-      <div class="container">
+<div class="container">
   <div class="card">
     <div class="card-body">
       <h1 class="text-center"> WAC 2020: On the Brink of War: What You Need To Know About the US and Iran</h1>
         <p class = "text-center">
             In the wake of Donald Trump's controversial decision to assassinate General Qassim Soleimani, Mehdi Hasan analyzes the ongoing tensions between the United Stated of America and the Republic of Iran, unpacks the history behind the fraught relations between the two countries, and offers his own solutions for ending four decades of enmity.
         </p>
-       <!-- <hr>
-      <img class="img-fluid d-block mx-auto my-2 img-half rounded" src="../img/speakers/.jpg" alt="Dr. James Hansen"/>
-        
-      <h2 class="text-center">Dr. James Hansen</h2>
+       <hr>
+      <img class="img-fluid d-block mx-auto my-2 img-half rounded" src="../img/speakers/mhasen.jpg" alt="Mehdi Hasan"/>
+      <h2 class="text-center">Mehdi Hasan</h2>
       <p>
-        Dr. James Hansen will address these key issues and more in his Keynote Address. We will have the fortune of hearing not only about his extensive experience as an environmental advocate, scientist, and professor, but also the opportunity to engage in an open-discourse on the climate. We request that students come to the address with questions and issues in mind. The address will not merely be a lecture, but a two-way exchange of ideas.
-      </p> -->
+        Mehdi Hasan is an award-winning journalist, political commentator, senior contributor at The Intercept, host of the podcast Deconstructed, as well as a presenter for Al Jazeera English. He is known globally for his televised takedowns of world leaders and political proxies. As a British, Muslim immigrant based in Donald Trump's Washington D.C., Mehdi offers a provocative perspective on the ups and downs of global politics and world affairs. At a time when the truth is being denied to the world, in the midst of chaos, moral failure, and when everything seems out of WAC, Mehdi exemplifies tenacity and courage in countering the myths and snowballing used by opponents of transparency, pluralism and democracy. 
+      </p>
     </div>
   </div>
   <div class="card-deck mt-2">
