--- a/index.html
+++ b/index.html
@@ -168,10 +168,11 @@
               Thanks for looking at the WAC website, be sure to also check out <font color="red">SPRINT</font>: an all new ideathon with tons of prizes, amazing speakers and more!
           </div>
           <div class="modal-body">
-              Click the <font color="red">SPRINT</font> button in the top right to learn more.
+              Click the <font color="red">SPRINT</font> button to learn more!
           </div>
           <div class="modal-footer">
             <button type="button" data-dismiss="modal" class="btn btn-primary">Close</button>
+            <a href="wacathon/index.html"><button type ="button" class="btn btn-danger">Sprint</button></a>
           </div>
         </div>
     </div>
