--- a/wacathon/index.html
+++ b/wacathon/index.html
@@ -62,7 +62,7 @@
     </ul>
     <ul class="navbar-nav float-lg-right">
       <li class="nav-item mr-2">
-        <a class="btn btn-outline-danger active" href="https://worldaffarisregistration.github.io/#/" data-proofer-ignore>SPRINT</a>
+        <a class="btn btn-outline-danger active" href="index.html" data-proofer-ignore>SPRINT</a>
       </li>
       <li class="nav-item">
         <a class="btn btn-outline-primary" href="https://worldaffarisregistration.github.io/#/" data-proofer-ignore>Register</a>
