Not really the popup, info update

--- a/plenaries/pol.html
+++ b/plenaries/pol.html
@@ -98,36 +98,26 @@
 					</div>
 				</div>
 			</div>
-            <!--
 			<div class="card card-body mt-2">
 				<h1 class="text-center">Speakers</h1>
 				<div class="row pb-2">
 					<div class="col-md-4">
-						<img class="img-fluid mx-auto d-block rounded" src="../img/speakers/Doosterman.png" alt="Dennon Oosterman">
+						<img class="img-fluid mx-auto d-block rounded" src="../img/speakers/jreitz.jpg" alt="Jeffery Reitz">
 					</div>
 					<div class="col-md-8">
-						<h2 class="text-center text-md-left">Dennon Oosterman</h2>
-						Dennon Oosterman is known to be an innovator, inventor, leader, and entrepreneur. His Bachelor of Applied Science in Engineering Physics at the University of British Columbia and internships at Bell and Columbia Capital could not satisfy his need to provide to the environment. Dennon Oosterman is the Founder and CEO of ReDeTec, a company that develops recycling technology for 3D printers. He worked to develop the core technology, led all private and public funding efforts, and built his current team to what they are today. His dream is to empower businesses and educators with unlimited creative freedom through sustainable manufacturing. From research and development to product development and branding, building a business around innovative technology is what Oosterman does best.
+						<h2 class="text-center text-md-left">Jeffery Reitz</h2>
+						Jeffrey G. Reitz (Ph.D., FRSC) is the R.F. Harney Professor and Director of the Ethnic, Immigration and Pluralism Studies Program at the Munk School of Global Affairs and Public Policy at the University of Toronto, and Professor and former Chair in the University’s Department of Sociology.  He has published extensively on immigration and inter-group relations in Canada from comparative perspectives and has frequently contributed to discussions of policies on immigration, multiculturalism and immigrant employment in Canada.
 					</div>
 				</div>
-				<div class="row">
-					<div class="col-md-4">
-						<img class="img-fluid mx-auto d-block rounded" src="../img/speakers/ayetchew.png" alt="Yossi Sheffi">
-					</div>
-					<div class="col-md-8">
-						<h2 class="text-center text-md-left">Adonis Yatchew</h2>
-						Adonis Yatchew’s research focuses on energy and regulatory economics, and econometrics. Since completing his Ph.D. at Harvard University, he has taught at the University of Toronto. He has also held visiting appointments at Trinity College, Cambridge University, the University of Chicago and Australian National University, among others. He the Editor-in-Chief of The Energy Journal. He has advised public and private sector companies on energy, regulatory and other matters for over 25 years and has provided testimony in numerous regulatory and litigation procedures. Adonis Yatchew currently teaches undergraduate and graduate courses in energy, graduate courses in econometrics and ‘Big Ideas’ courses in the School of Environment with colleagues in physics and classics.
-					</div>
-				</div>
+				
 			</div>
-            -->
 			<div class="card card-body text-center mt-2">
 				<p class="card-text">
 					<a class="card-link" href="../plenaries/index.html"><span class="fa fa-arrow-left"></span> View the other plenaries.</a>
 				</p>
 			</div>
 		</div>
-		</br>
+		
 		<footer class="footer text-center mt-3">
   <div class="container">
     <p>
