--- a/plenaries/sprea.html
+++ b/plenaries/sprea.html
@@ -98,11 +98,11 @@
                 <hr>
 				<div class="row pb-2">
 					<div class="col-md-4">
-						<img class="img-fluid mx-auto d-block rounded" src="../img/speakers/ehunter.jpg" alt="Emma Hunter">
+						<img class="img-fluid mx-auto d-block rounded" src="../img/speakers/ahuntley.jpg" alt="Emma Hunter">
 					</div>
 					<div class="col-md-8">
-						<h2 class="text-center text-md-left">Emma Hunter</h2>
-                        Emma Hunter is a Canadian actress and journalist.In 2018, she received three Canadian Screen Award nominations at the 6th Canadian Screen Awards, in the categories of Best Supporting Actress in a Comedy Program or Series for Mr. D, Best Ensemble Performance in a Variety or Sketch Comedy Program or Series for The Beaverton, and Best Actress in a Web Program or Series for Save me. She won the award for Best Actress in a Web Program or Series. She also co-anchors with Miguel Riveras for the news satire series The Beaverton.
+						<h2 class="text-center text-md-left">Alex Huntley</h2>
+                       Alex Huntley is an editor and senior writer with The Beaverton. Born and raised in Niagara, he earned a BA with Honours in politics and history and a Master’s in Public Administration from Queen’s University. Since joining The Beaverton in 2012, this government policy analyst turned comedy writer has expanded the publication’s presence in Canada by living in Montreal, Whitehorse, and exotic Winnipeg while recruiting local writers. Having a love affair with Canadian history since childhood, he created The Beaverton’s Moments in Canadian History in 2013.
 
 					</div>
 				</div>
