--- a/schedule/index.html
+++ b/schedule/index.html
@@ -158,12 +158,12 @@
     	      <td>Old Gym</td>
     	    </tr>
     	    <tr>
-    	      <td>Michelle Romanow Address</td>
+    	      <td>Michele Romanow Address</td>
     	      <td>1:15 to 2:45</td>
     	      <td>Laidlaw Hall</td>
     	    </tr>
             <tr>
-    	      <td>Michelle Romanow Q&A</td>
+    	      <td>Michele Romanow Q&A</td>
     	      <td>2:15 to 2:45</td>
     	      <td>Laidlaw Hall</td>
     	    </tr>
