--- a/wacathon/index.html
+++ b/wacathon/index.html
@@ -36,7 +36,7 @@
 
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="nav navbar-nav mr-auto">
-      <li class="nav-item active">
+      <li class="nav-item">
         <a class="nav-link" href="../keynote/index.html">Keynote</a>
       </li>
       <!--
