Change Plen formating!

--- a/plenaries/index.html
+++ b/plenaries/index.html
@@ -80,47 +80,44 @@
   </div>
   
   <div class="card-deck mt-2">
-      <div class="card card-body">
-        <div class="row">
-          <div class="col-sm-12">
-            <a href="../plenaries/space.html"><h4 class="card-title">Climate Change: Myth vs. Reality</h4></a>
-            <p class="card-text">Climate change is an imminent issue that may become irreversible in 12 years, but why are some of the richest individuals in the world investing in space exploration rather than climate change? This raises the question: should we spend the next 12 years tackling the issue here on Earth or focus on finding a new home? </p>
+      <div class="card">
+          <a href="space.html">
+          <img class="card-img" style = "filter: brightness(60%)" src="../img/plen/space.png" alt="Card image">
+          <div class="card-img-overlay text-center text-white">
+            <h2 class="card-title" style="text-shadow:-1px 0 black, 0 1px black, 1px 0 black, 0 -1px black">Climate Change: Myth vs. Reality</h2>
           </div>
-        </div>
+          </a>
       </div>
   
   
-  
-      <div class="card card-body">
-        <div class="row">
-          <div class="col-sm-12">
-            <a href="../plenaries/pol.html"><h4 class="card-title">Immigration</h4></a>
-            <p class="card-text">Immigration has never been more important than it is today. With 1 in every 30 people living outside their country of birth, there have never been higher levels of movement recorded. However, with issues surrounding refugees, illegal immigrants, and asylum seekers on the rise, must countries create and strengthen existing immigration policies in order to create the best situation possible for all?
-            </p>
+      <div class="card">
+          <a href="educ.html">
+          <img class="card-img" style = "filter: brightness(60%)" src="../img/plen/education.png" alt="Card image">
+          <div class="card-img-overlay text-center text-white">
+            <h3 class="card-title" style="text-shadow:-1px 0 black, 0 1px black, 1px 0 black, 0 -1px black">Too Cool for School?</h3>
           </div>
-        </div>
+          </a>
       </div>
   </div>
   
   <div class="card-deck mt-2">
-      <div class="card card-body">
-        <div class="row">
-          <div class="col-sm-12">
-            <a href="../plenaries/educ.html"><h4 class="card-title">Too Cool for School?</h4></a>
-              <p class="card-text">With technology and innovation at the forefront of future job markets, some argue that the education system has failed to evolve with the times. As the digital age becomes increasingly imposing, it is important to critique the limitations that university may have on creativity.  </p>
+      <div class="card">
+          <a href="pol.html">
+          <img class="card-img" style = "filter: brightness(60%)" src="../img/plen/immigration.png" alt="Card image">
+          <div class="card-img-overlay text-center text-white">
+            <h3 class="card-title" style="text-shadow:-1px 0 black, 0 1px black, 1px 0 black, 0 -1px black">Immigration</h3>
           </div>
-        </div>
+          </a>
       </div>
   
   
-  
-      <div class="card card-body">
-        <div class="row">
-          <div class="col-sm-12">
-            <a href="../plenaries/sprea.html"><h4 class="card-title">Satirical Society</h4></a>
-            <p class="card-text">The current political climate is scary, and classic news reporting makes things seem grim. If you go online, it is clear that many people find solace in political satire, with comedians like John Olivers and Trevor Noah having millions of subscribers. In this kind of political climate, is satire a double-edged sword?</p>
+      <div class="card">
+          <a href="sprea.html">
+          <img class="card-img" style = "filter: brightness(60%)" src="../img/plen/fake.png" alt="Card image">
+          <div class="card-img-overlay text-center text-white">
+            <h3 class="card-title" style="text-shadow:-1px 0 black, 0 1px black, 1px 0 black, 0 -1px black">Satirical Society</h3>
           </div>
-        </div>
+          </a>
       </div>
   </div>
   
