--- a/plenaries/index.html
+++ b/plenaries/index.html
@@ -74,7 +74,7 @@
 
 
       <div class="container">
-  <div class="card card-body">
+  <div class="card card-body text-center">
     <h1>Plenaries</h1>
   </div>
   
