--- a/plenaries/index.html
+++ b/plenaries/index.html
@@ -104,7 +104,7 @@
           <a href="pol.html">
           <img class="card-img" style = "filter: brightness(60%)" src="../img/plen/immigration.png" alt="Card image">
           <div class="card-img-overlay text-center text-white">
-            <h3 class="card-title" style="text-shadow:-1px 0 black, 0 1px black, 1px 0 black, 0 -1px black">Immigration</h3>
+            <h3 class="card-title" style="text-shadow:-1px 0 black, 0 1px black, 1px 0 black, 0 -1px black">Immigration: Two sides of the same wall</h3>
           </div>
           </a>
       </div>
