--- a/plenaries/index.html
+++ b/plenaries/index.html
@@ -93,7 +93,7 @@
           <a href="educ.html">
           <img class="card-img" style = "filter: brightness(60%)" src="../img/plen/education.png" alt="Card image">
           <div class="card-img-overlay text-center text-white">
-            <h3 class="card-title" style="text-shadow:-1px 0 black, 0 1px black, 1px 0 black, 0 -1px black">Too Cool for School?</h3>
+            <h3 class="card-title" style="text-shadow:-1px 0 black, 0 1px black, 1px 0 black, 0 -1px black">Too Cool for School</h3>
           </div>
           </a>
       </div>
