typos and additions!

--- a/faq/index.html
+++ b/faq/index.html
@@ -157,7 +157,7 @@
           </a>
           <div id="collapse-costofsprint" class="collapse" role="tabpanel" aria-labelledby="heading-costofsprint">
             <div class="card-body">
-              <p>Yes, each accepted delegate must pay $50 in order to come to the SPRINT you must pay $50 "design-a-thon." Special accommodations may however be available if you contact WAC by email (wac@ucc.on.ca).</p>
+              <p>Yes, each accepted delegate must pay $50 in order to come to the SPRINT. Special accommodations may however be available if you contact WAC by email (wac@ucc.on.ca).</p>
             </div>
           </div>
         </div>
