--- a/wacathon/index.html
+++ b/wacathon/index.html
@@ -85,9 +85,9 @@
     <div class="card-body">
       <h1 class="text-center">WAC SPRINT</h1>
         <p class = "card-text">
-            Have you ever wished that you could share your ideas for reinventing education? Join us at the inaugural WAC: SPRINT! Collaborate with other passionate students to develop unique ideas to reimagine education. Engage with the team from Future Design School as you develop your ideas, validate them and craft a pitch that you will present to a panel of experts judges for great prizes! 
+            Have you ever wished that you could share your ideas for reinventing education? Join us at the inaugural WAC: SPRINT! Collaborate with other passionate students to develop unique ideas to reimagine education. Engage with the team from Future Design School as you develop your ideas, validate them and craft a pitch that you will present to a panel of experts judges for great prizes!<span style="font-weight: bold;"> Do note however the price of attendance will be $50 (Lunch will be provided.)</span>
         </p>
-        <p>(Registration is at the bottom of the page)</p>
+        <p class = "text-center">(Registration is at the bottom of the page)</p>
     </div>
   </div>
     
