--- a/schedule/index.html
+++ b/schedule/index.html
@@ -99,7 +99,7 @@
     	      <td>Main Foyer</td>
     	    </tr>
     	    <tr>
-    	      <td>Address</td>
+    	      <td><a href="../keynote/index.html">Keynote</a></td>
     	      <td>7:00 to 8:00</td>
     	      <td>Laidlaw Hall</td>
     	    </tr>
@@ -128,7 +128,7 @@
     	      <td>Main Foyer</td>
     	    </tr>
     	    <tr>
-    	      <td>Opening Address</td>
+              <td><a href="../addresses/index.html">Opening Address</a></td>
     	      <td>9:30 to 10:00</td>
     	      <td>Laidlaw Hall</td>
     	    </tr>
@@ -158,7 +158,7 @@
     	      <td>Old Gym</td>
     	    </tr>
     	    <tr>
-    	      <td>Michele Romanow Address</td>
+              <td><a href="../addresses/index.html">Michele Romanow Address</a></td>
     	      <td>1:15 to 2:45</td>
     	      <td>Laidlaw Hall</td>
     	    </tr>
